--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head> 
 
 <body> 
-<h1>Have you ever tried a cucamelon?</h1> 
+<h1>Have you ever tried a cucamelon?</h1>
+  <img src="cucamelon.jpg">
 <p>I am building a directory people who have tried cucamelons and what they think.</p> 
 
 <form name="travel" onsubmit="identify(event)"> Have you ever tried a cucamelon? <input name="destination" required="" size="81" type="text"/> 
