--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body> 
 <h1>Have you ever tried a cucamelon?</h1>
-  <img src="cucamelon.jpg">
+  <img src="https://raw.githubusercontent.com/lorynwithay/cucamelon/main/cucamelon.jpeg">
 <p>I am building a directory people who have tried cucamelons and what they think.</p> 
 
 <form name="travel" onsubmit="identify(event)"> Have you ever tried a cucamelon? <input name="destination" required="" size="81" type="text"/> 
